Added footer, members layout

--- a/app/fonts/NanumBarunRoboto/stylesheet.css
+++ b/app/fonts/NanumBarunRoboto/stylesheet.css
@@ -65,7 +65,7 @@
 }
 
 @font-face {
-	font-family: "NanumBarunRoboto Light";
+	font-family: "NanumBarunRoboto";
 	src: url('NanumBarunRobotoLight_0.eot?#iefix') format('embedded-opentype'),
 		url('NanumBarunRobotoLight_0.woff') format('woff'),
 		url('NanumBarunRobotoLight_0.woff2') format('woff2'),
@@ -76,7 +76,7 @@
 }
 
 @font-face {
-	font-family: "NanumBarunRoboto Light";
+	font-family: "NanumBarunRoboto";
 	src: url('NanumBarunRobotoLight_1.eot?#iefix') format('embedded-opentype'),
 		url('NanumBarunRobotoLight_1.woff') format('woff'),
 		url('NanumBarunRobotoLight_1.woff2') format('woff2'),
@@ -87,7 +87,7 @@
 }
 
 @font-face {
-	font-family: "NanumBarunRoboto Light";
+	font-family: "NanumBarunRoboto";
 	src: url('NanumBarunRobotoLight_2.eot?#iefix') format('embedded-opentype'),
 		url('NanumBarunRobotoLight_2.woff') format('woff'),
 		url('NanumBarunRobotoLight_2.woff2') format('woff2'),
@@ -98,7 +98,7 @@
 }
 
 @font-face {
-	font-family: "NanumBarunRoboto Light";
+	font-family: "NanumBarunRoboto";
 	src: url('NanumBarunRobotoLight_3.eot?#iefix') format('embedded-opentype'),
 		url('NanumBarunRobotoLight_3.woff') format('woff'),
 		url('NanumBarunRobotoLight_3.woff2') format('woff2'),
@@ -109,7 +109,7 @@
 }
 
 @font-face {
-	font-family: "NanumBarunRoboto Light";
+	font-family: "NanumBarunRoboto";
 	src: url('NanumBarunRobotoLight_4.eot?#iefix') format('embedded-opentype'),
 		url('NanumBarunRobotoLight_4.woff') format('woff'),
 		url('NanumBarunRobotoLight_4.woff2') format('woff2'),
@@ -120,7 +120,7 @@
 }
 
 @font-face {
-	font-family: "NanumBarunRoboto Light";
+	font-family: "NanumBarunRoboto";
 	src: url('NanumBarunRobotoLight_5.eot?#iefix') format('embedded-opentype'),
 		url('NanumBarunRobotoLight_5.woff') format('woff'),
 		url('NanumBarunRobotoLight_5.woff2') format('woff2'),
